--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "bootstrap-vue": "^2.21.2",
         "core-js": "^3.8.3",
         "nuxt": "^2.15.3",
-        "remixicon": "^2.5.0"
+        "remixicon": "^2.5.0",
+        "vue-owl-carousel": "^2.0.3"
     },
     "devDependencies": {}
 }
