--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@nuxtjs/auth-next": "5.0.0-1620773067.c356fed",
         "@nuxtjs/axios": "^5.13.1",
         "aos": "^2.3.4",
-        "bootstr bnap": "^4.6.0",
+        "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.4.1",
         "bootstrap-vue": "^2.21.2",
         "core-js": "^3.8.3",
