--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "nuxt": "^2.15.4",
         "remixicon": "^2.5.0",
         "sweetalert": "^2.1.2",
+        "v-calendar": "^2.3.0",
         "vue-owl-carousel": "^2.0.3",
         "vue-select": "^3.11.2"
     },
