--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.4.1",
         "bootstrap-vue": "^2.21.2",
+        "chart.js": "^3.3.2",
         "core-js": "^3.8.3",
+        "mdbvue": "^6.7.2",
         "nuxt": "^2.15.4",
         "remixicon": "^2.5.0",
         "sweetalert": "^2.1.2",
         "v-calendar": "^2.3.0",
+        "vue-chartjs": "^3.5.1",
         "vue-owl-carousel": "^2.0.3",
         "vue-select": "^3.11.2"
     },
