--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@nuxt/http": "^0.5.0",
         "@nuxtjs/auth-next": "5.0.0-1620773067.c356fed",
         "@nuxtjs/axios": "^5.13.1",
         "aos": "^2.3.4",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.4.1",
         "bootstrap-vue": "^2.21.2",
-        "chart.js": "^3.3.2",
+        "chart.js": "^2.9.4",
         "core-js": "^3.8.3",
         "mdbvue": "^6.7.2",
         "nuxt": "^2.15.4",
         "remixicon": "^2.5.0",
+        "reqlim": "^0.0.0",
         "sweetalert": "^2.1.2",
         "v-calendar": "^2.3.0",
         "vue-chartjs": "^3.5.1",
