--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "v-calendar": "^2.3.0",
         "vue-chartjs": "^3.5.1",
         "vue-owl-carousel": "^2.0.3",
+        "vue-quill-editor": "^3.0.6",
         "vue-select": "^3.11.2"
     },
     "devDependencies": {
