--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "bootstrap-vue": "^2.21.2",
         "chart.js": "^2.9.4",
         "core-js": "^3.8.3",
+        "dayjs": "^1.10.6",
         "mdbvue": "^6.7.2",
         "nuxt": "^2.15.4",
         "remixicon": "^2.5.0",
