--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "chart.js": "^2.9.4",
         "core-js": "^3.8.3",
         "dayjs": "^1.10.6",
+        "material-design-icons": "^3.0.1",
+        "material-icons": "^1.2.1",
         "mdbvue": "^6.7.2",
         "nuxt": "^2.15.4",
         "remixicon": "^2.5.0",
